# errors-cpp

./: .cmake-format  .gitignore  .readthedocs.yaml  CMakeLists.txt  README.md
.github/workflows/: build.yaml  build.yml  check.yaml  deploy.yaml  test.yaml  test.yml
cmake/: CPM.cmake  ErrorsConfig.cmake  FindCDeps.cmake  FindCatch2.cmake  FindCheckWarning.cmake  FindFMT.cmake  FindFixFormat.cmake  GenerateDocs.cmake  add_xml_docs.cmake
components/: CMakeLists.txt
components/format/: CMakeLists.txt
components/format/include/errors/: format.hpp  format.ipp
components/format/src/: format.cpp
components/format/test/: format_test.cpp
docs/: CMakeLists.txt  conf.py  index.rst
docs/error/: index.rst
error/: CMakeLists.txt  README.md
error/cmake/: add_xml_docs.cmake  target_generate_xml_docs.cmake
error/include/error/: error.hpp
error/src/: error.cpp
error/test/: error_test.cpp
example/: README.md
examples/: CMakeLists.txt  README.md  print_hex.cpp  read_file.cpp
include/errors/: error.hpp  format.hpp  format.ipp
src/: error.cpp
test/: error_test.cpp
